[tool.poetry]
name = "llmlib"
version = "0.1.0"
description = "A helper library for working with LLMs"
authors = ["Rushabh Doshi <radoshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
tomli = "^2.0.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.264"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
